--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
             android:gravity="center"
+            android:padding="20dp"
             android:orientation="vertical">
             <Button
                 android:id="@+id/button"
@@ -37,6 +39,94 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Map" />
+            <Button
+                android:id="@+id/button_from"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="From" />
+            <Button
+                android:id="@+id/button_all"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="All" />
+            <Button
+                android:id="@+id/button_group_by"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Group by" />
+            <Button
+                android:id="@+id/button_contains"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Contains" />
+            <Button
+                android:id="@+id/button_exists"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Exists" />
+
+            <Button
+                android:id="@+id/button_limit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Take" />
+
+            <Button
+                android:id="@+id/button_is_empty"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Is empty" />
+
+            <Button
+                android:id="@+id/button_concat"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Concat" />
+            <Button
+                android:id="@+id/button_sequence_equal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="SequenceEqual" />
+
+            <Button
+                android:id="@+id/button_combine_latest"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Combine Latest" />
+            <Button
+                android:id="@+id/button_zip"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Zip" />
+
+            <Button
+                android:id="@+id/button_async"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Async" />
+
+            <Button
+                android:id="@+id/button_observe_on"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Observe on" />
+            <Button
+                android:id="@+id/button_subscribe_on"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Subscribe on" />
+
+            <Button
+                android:id="@+id/button_amb"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Amb" />
+            <Button
+                android:id="@+id/button_merge"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Merge" />
+
         </LinearLayout>
     </ScrollView>
 
